styling fixes and cleaned up white space

--- a/server/public/styles/main.css
+++ b/server/public/styles/main.css
@@ -1,12 +1,15 @@
 
 body {
-    background: linear-gradient(lightblue,lightgrey);
+    background: linear-gradient(lightblue,whitesmoke);
 }
 
 img {
-  display: block;
-  border: 1px solid black;
-  box-shadow: 5px 10px 18px #888888;
+    height: 300px;
+    width: 300px;
+    display: block;
+    border: 1px solid black;
+    box-shadow: 5px 10px 18px #888888;
+    border-radius: 10px;
   
 }
 
@@ -14,9 +17,8 @@ img {
   position: relative;
   z-index: 2;
   padding: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
+  flex-direction: row ;
   -ms-flex-flow: row wrap;
       flex-flow: row wrap;
   -webkit-box-pack: justify;
@@ -34,11 +36,10 @@ img {
   border-radius: 10px;
   cursor: pointer;
 }
-.gallery figure img {
+.gallery figure {
   width: 100%;
   border-radius: 10px;
-  -webkit-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+ 
 }
 
 small {
